OPIK-728 Attachment download and list endpoints